<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="vertical" />
    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ford_protiv_ferrari__1900kh900px"
         />

    <ImageView
        android:id="@+id/poster"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:srcCompat="@drawable/fordvsferrari_13"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="40dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintEnd_toStartOf="@id/poster"
        app:layout_constrainedWidth="true"
        android:text="@string/Ford_vs_Ferrari"
        app:layout_constraintHorizontal_bias="0"
        android:textColor="#000000"
        android:textSize="23sp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="241dp"
        android:layout_marginEnd="8dp"
        app:layout_goneMarginEnd="16dp"

        />

    <TextView
        android:id="@+id/director_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/belgrano"
        android:text="@string/laber_director"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/belgrano"
        android:text="@string/film_director"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="@id/director_label"
        app:layout_constraintEnd_toStartOf="@id/poster"
        app:layout_constraintStart_toEndOf="@id/director_label"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/title_section_bottom_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:barrierDirection="bottom"
        tools:ignore="MissingConstraints"
        app:constraint_referenced_ids="title, poster, director_label, director"
        />

    <TextView
        android:id="@+id/short_descriptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/film_text"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_section_bottom_barrier"
        app:layout_goneMarginStart="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/actors_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actors"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="432dp" />
    
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/actors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/actors_label"
        app:constraint_referenced_ids="actor_1, actor_2, actor_3, actor_4"
        app:flow_wrapMode="chain"
        app:flow_horizontalBias="0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalStyle="packed"
        app:flow_verticalStyle="packed"
        app:flow_horizontalGap="8dp"
        app:flow_verticalGap="8dp" />

    <TextView
        android:id="@+id/actor_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Кристиан Бэйл"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="477dp" />

    <TextView
        android:id="@+id/actor_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Мэтт Дэймон"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="477dp" />

    <TextView
        android:id="@+id/actor_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Трейси Леттс"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="283dp"
        tools:layout_editor_absoluteY="476dp" />

    <TextView
        android:id="@+id/actor_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Джон Бернтал"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="519dp" />

    <Button
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Лайк"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_goneMarginEnd="0dp"
        app:layout_goneMarginStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/watch"
        app:layout_constraintTop_toBottomOf="@id/actors"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Button
        android:id="@+id/watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Смотреть"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_goneMarginEnd="0dp"
        app:layout_constraintEnd_toStartOf="@id/share"
        app:layout_constraintStart_toEndOf="@id/like"
        app:layout_constraintTop_toBottomOf="@id/actors"
         />

    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Поделиться"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_goneMarginEnd="0dp"
        app:layout_constraintStart_toEndOf="@id/watch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actors"
        />


</androidx.constraintlayout.widget.ConstraintLayout>















































